--- a/index.html
+++ b/index.html
@@ -49,43 +49,117 @@
         <h6 id="forsideOverskrift2">Sammenhold er vigtigere end alkohol.</h6>
     </aside>
 
-    <!-- tekst på forsiden-->
-    <section class="introTekst">
-        <h3>FYLDIG SMAG UDEN KOMPROMIS</h3>
-        <p>Hos ZeroBuzz Brew brygger vi alkoholfri øl med smag i fokus – fyldige, friske og kompromisløse. Vi udfordrer
-            det traditionelle ølmarked og beviser, at alkoholfri øl kan være lige så sprød, aromatisk og karakterfuld
-            som enhver anden specialøl.<br><br>Vi skaber en kultur, hvor valget om at skåle uden alkohol føles
-            naturligt, smagfuldt og helt uden kompromis.</p>
-    </section>
 
-<!-- Slider med dåser -->
- <section class="produktContainer">
-    <h2>VÆLG DIN FARVORIT ZEROBUZZ:</h2>
-    <div class="produktSlider">
-        <div class="produkt">
-            <img src="images/green.png" alt="Zero Green">
-            <h4>ZERO GREEN</h4>
-            <h5>MED LIME.<br>FRISK OG FRUGTIG</h5>
-        </div>
-        <div class="produkt">
-            <img src="images/pink.png" alt="Zero Pink">
-            <h4>ZERO PINK</h4>
-            <h5>MED GRAPE.<br>FRISK OG FRUGTIG</h5>
-        </div>
-        <div class="produkt">
-            <img src="images/orange.png" alt="Zero Orange">
-            <h4>ZERO ORANGE</h4>
-            <h5>MED APPELSIN.<br>FRISK OG FRUGTIG</h5>
-        </div>
-        <div class="produkt">
-            <img src="images/yellow.png" alt="Zero Yellow">
-            <h4>ZERO YELLOW</h4>
-            <h5>MED CITRUS.<br>FRISK OG FRUGTIG</h5>
-        </div>
-    </div>
-</section>
+    <main>
+        <!-- tekst på forsiden-->
+        <section class="introTekst">
+            <h3>FYLDIG SMAG UDEN KOMPROMIS</h3>
+            <p>Hos ZeroBuzz Brew brygger vi alkoholfri øl med smag i fokus – fyldige, friske og kompromisløse. Vi
+                udfordrer
+                det traditionelle ølmarked og beviser, at alkoholfri øl kan være lige så sprød, aromatisk og
+                karakterfuld
+                som enhver anden specialøl.<br><br>Vi skaber en kultur, hvor valget om at skåle uden alkohol føles
+                naturligt, smagfuldt og helt uden kompromis.</p>
+        </section>
 
-</section>
+        <!-- Slider med dåser -->
+        <section class="produktContainer">
+            <h2>VÆLG DIN FARVORIT ZEROBUZZ:</h2>
+            <div class="produktSlider">
+                <div class="produkt">
+                    <img src="images/green.png" alt="Zero Green">
+                    <h4>ZERO GREEN</h4>
+                    <h5>MED LIME.<br>FRISK OG FRUGTIG</h5>
+                </div>
+                <div class="produkt">
+                    <img src="images/pink.png" alt="Zero Pink">
+                    <h4>ZERO PINK</h4>
+                    <h5>MED GRAPE.<br>FRISK OG FRUGTIG</h5>
+                </div>
+                <div class="produkt">
+                    <img src="images/orange.png" alt="Zero Orange">
+                    <h4>ZERO ORANGE</h4>
+                    <h5>MED APPELSIN.<br>FRISK OG FRUGTIG</h5>
+                </div>
+                <div class="produkt">
+                    <img src="images/yellow.png" alt="Zero Yellow">
+                    <h4>ZERO YELLOW</h4>
+                    <h5>MED CITRUS.<br>FRISK OG FRUGTIG</h5>
+                </div>
+            </div>
+        </section>
+
+        <section class="citatContainer">
+            <h2 class="citat">"ZEROBUZZ BREW - FORDI DET ER COOL AT TAGE BEVIDSTE VALG"</h2>
+        </section>
+
+
+        <!-- Section med "vores historie"-->
+        <section id="historie">
+            <figure>
+                <img src="images/kvadratiskeBilleder.png" alt="Stemningsbilleder med øl og citrusfrugter">
+            </figure>
+            <article>
+                <h3>VORES HISTORIE</h3>
+                <p>Hos ZeroBuzz Brew handler det ikke om alkohol – det handler om fællesskab. Vi brygger velsmagende,
+                    alkoholfri øl,
+                    fordi vi tror på, at alle skal kunne skåle sammen uden pres eller kompromis.<br><br>Vores mission er
+                    at
+                    gøre det
+                    nemmere at vælge alkoholfri alternativer og skabe en kultur, hvor hygge, smag og gode oplevelser
+                    altid
+                    er i
+                    fokus.</p>
+                <a href="#" class="knap">UDFORSK MERE</a>
+
+            </article>
+        </section>
+    </main>
+
+
+    <!--- FOOTER  -->
+    <footer class="footer">
+        <div class="footerContainer">
+            <div class="footerLogo">
+                <img src="images/citronLogo.svg" alt="Footer logo" class="footerLogo">
+            </div>
+            <div class="footerKolonner">
+                <div class="footerTekst">
+                    <h5>PRODUKTER</h5>
+                    <br>
+                    <p>
+                        <a href="#">ZERO GREEN</a><br>
+                        <a href="#">ZERO YELLOW</a><br>
+                        <a href="#">ZERO PINK</a><br>
+                        <a href="#">ZERO ORANGE</a>
+                    </p>
+                </div>
+                <div class="footerTekst">
+                    <h5>OM OS</h5>
+                    <br>
+                    <p>
+                        <a href="#">MISSION</a><br>
+                        <a href="#">FAQ</a>
+                    </p>
+                </div>
+                <div class="footerTekst">
+                    <h5>KONTAKT</h5>
+                    <br>
+                    <p>
+                        TELEFON: +45 72 53 85 72<br>
+                        <br>
+                        MAIL: ZEROBUZZ@BREW.DK<br>
+                        <br>
+                        ADRESSE:<br>STORMGADE 45, 2500 VALBY
+                        <br>
+                        <br>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
 
 </body>
 
