--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>ZeroBuzz Brew</title>
     <link rel="stylesheet" href="css/generelStyling.css">
     <link rel="stylesheet" href="css/forside.css">
-    <link rel="stylesheet" href="javascript/script.js" defer>
 
     <!-- Fonte-->
     <!-- Poppins og inter-->
@@ -37,7 +36,7 @@
 
     <!-- Tekst ovenpå billede-->
     <aside id="tekstOverlay">
-        <h1 id="forsideOverskrift">ZEROBUZZ BREW.</h1>
+        <h1 id="forsideOverskrift">ZEROBUZZ BREW<span class="gulPunktum">.</span></h1>
         <h6 id="forsideOverskrift2">Sammenhold er vigtigere end alkohol.</h6>
     </aside>
 
@@ -56,7 +55,7 @@
 
         <!-- Slider med dåser -->
         <section class="produktContainer">
-            <h2>VÆLG DIN FARVORIT ZEROBUZZ:</h2>
+            <h2>VÆLG DIN FAVORIT ZEROBUZZ:</h2>
             <div class="produktSlider">
                 <div class="produkt">
                     <img src="images/green.png" alt="Zero Green">
@@ -151,7 +150,7 @@
         </div>
     </footer>
 
-    <script src="javascript/script.js" defer></script>
+    <script src="javascript/navigationForside.js" defer></script>
 
 </body>
 
