--- a/produkter.html
+++ b/produkter.html
@@ -96,20 +96,23 @@
         <h2>DE ØVRIGE ZEROBUZZ VARIANTER:</h2>
 
         <section class="varianterContainer">
-            <div class="boksTilHverVariant">
+            <div class="boksTilHverVariant" onclick="changeToPink()">
                 <img src="images/pink.png" alt="ZeroBuzz Pink" class="billedeVarianter">
                 <h4>ZERO PINK</h4>
-                <h5>MED GRAPE.<br>FRISK OG FRUGTIG</h5>
+                <h5 class="tekstSmag">MED GRAPE.</h5>
+                <h5>FRISK OG FRUGTIG</h5>            
             </div>
             <div class="boksTilHverVariant">
                 <img src="images/yellow.png" alt="ZeroBuzz Yellow" class="billedeVarianter">
                 <h4>ZERO YELLOW</h4>
-                <h5>MED CITRON.<br>FRISK OG FRUGTIG</h5>
+                <h5>MED CITRON.</h5>
+                <h5>FRISK OG FRUGTIG</h5>   
             </div>
             <div class="boksTilHverVariant">
                 <img src="images/orange.png" alt="ZeroBuzz Orange" class="billedeVarianter">
                 <h4>ZERO ORANGE</h4>
-                <h5>MED APPELSIN.<br>FRISK OG FRUGTIG</h5>
+                <h5>MED APPELSIN.</h5>
+                <h5>FRISK OG FRUGTIG</h5>   
             </div>
         </section>
 
@@ -163,8 +166,8 @@
         </div>
     </footer>
 
-    <script src="javascript/navigation.js" defer></script>
-    
+    <script src="javascript/produkter.js" defer></script>
+
 </body>
 
 </html>
