--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="images/logo.svg" alt="tekst logo" id="navLogo">
 
             <div class="navLinks">
-                <a href="#">PRODUKTER</a>
+                <a href="produkter.html">PRODUKTER</a>
                 <a href="#">OM OS</a>
                 <a href="#">FAQ</a>
             </div>
