--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- Poppins og inter-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -58,7 +60,9 @@
             <h2>VÆLG DIN FAVORIT ZEROBUZZ:</h2>
             <div class="produktSlider">
                 <div class="produkt">
-                    <img src="images/green.png" alt="Zero Green">
+                    <a href="produkter.html">
+                        <img src="images/green.png" alt="Zero Green">
+                    </a>
                     <h4>ZERO GREEN</h4>
                     <h5>MED LIME.<br>FRISK OG FRUGTIG</h5>
                 </div>
