--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="navLinks">
                 <a href="produkter.html">PRODUKTER</a>
-                <a href="#">OM OS</a>
+                <a href="omOs.html">OM OS</a>
                 <a href="#">FAQ</a>
             </div>
 
