--- a/produkter.html
+++ b/produkter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ZeroBuzz Brew - Produkter</title>
     <link rel="stylesheet" href="css/generelStyling.css">
     <link rel="stylesheet" href="css/produkter.css">
 
@@ -28,7 +28,7 @@
 
             <div class="navLinks">
                 <a href="#">PRODUKTER</a>
-                <a href="#">OM OS</a>
+                <a href="omOs.html">OM OS</a>
                 <a href="#">FAQ</a>
             </div>
 
