--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
         <!-- Section med "vores historie"-->
-        <section id="historie">
+        <div id="historie">
             <figure>
                 <img src="images/kvadratiskeBilleder.png" alt="Stemningsbilleder med øl og citrusfrugter">
             </figure>
@@ -105,10 +105,10 @@
                     altid
                     er i
                     fokus.</p>
-                <a href="#" class="knap">UDFORSK MERE</a>
+                <a href="omOs.html" class="knap">UDFORSK MERE</a>
 
             </article>
-        </section>
+        </div>
     </main>
 
 
@@ -123,7 +123,7 @@
                     <h5>PRODUKTER</h5>
                     <br>
                     <p>
-                        <a href="#">ZERO GREEN</a><br>
+                        <a href="produkter.html">ZERO GREEN</a><br>
                         <a href="#">ZERO YELLOW</a><br>
                         <a href="#">ZERO PINK</a><br>
                         <a href="#">ZERO ORANGE</a>
@@ -133,7 +133,7 @@
                     <h5>OM OS</h5>
                     <br>
                     <p>
-                        <a href="#">MISSION</a><br>
+                        <a href="omOs.html">MISSION</a><br>
                         <a href="#">FAQ</a>
                     </p>
                 </div>
