--- a/omOs.html
+++ b/omOs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ZeroBuzz Brew - Om Os</title>
     <link rel="stylesheet" href="css/generelStyling.css">
     <link rel="stylesheet" href="css/omOs.css">
 
@@ -27,7 +27,7 @@
 
             <div class="navLinks">
                 <a href="produkter.html">PRODUKTER</a>
-                <a href="#">OM OS</a>
+                <a href="#" class="nav-link active">OM OS</a>
                 <a href="#">FAQ</a>
             </div>
 
@@ -37,7 +37,7 @@
     <!-- main del-->
     <h1 id="undersideOverskrift">OM ZEROBUZZ BREW<span class="gulPunktum">.</span></h1>
     <!-- billeder øverst-->
-    <section>
+    <div>
         <img src="images/startBillederOmOs.png" alt="Stemningsbilleder" id="startBillederOmOs">
 
         <p class="introTekst">ZeroBuzz Brew er skabt til dem, der elsker øl - men ikke nødvendigvis ønsker alkoholens
@@ -45,7 +45,7 @@
             håndværk, innovation og passion for brygning, så du kan nyde en sprød, aromatisk og velsmagende øl – uden
             kompromis.<br><br>Vores bryggeproces er nøje udviklet for at bevare de komplekse smagsnuancer, så hver
             eneste tår føles som en ægte smagsoplevelse.</p>
-    </section>
+        </div>
 
     <!-- Citat -->
     <section class="citatContainer">
@@ -55,7 +55,7 @@
     </section>
 
     <!-- Section med Vores Mission -->
-    <section id="mission">
+    <div id="mission">
         <figure>
             <img src="images/billedeVoresMission.png" alt="Billede af pige der drikker øl">
         </figure>
@@ -67,7 +67,7 @@
                 med fuld smag, uden at gå på kompromis med sociale oplevelser. Med ZeroBuzz Brew er du altid en del af
                 fællesskabet – uanset hvad der er i dit glas.</p>
         </article>
-    </section>
+    </div>
 
 
 
@@ -84,7 +84,7 @@
                     <h5>PRODUKTER</h5>
                     <br>
                     <p>
-                        <a href="#">ZERO GREEN</a><br>
+                        <a href="produkter.html">ZERO GREEN</a><br>
                         <a href="#">ZERO YELLOW</a><br>
                         <a href="#">ZERO PINK</a><br>
                         <a href="#">ZERO ORANGE</a>
@@ -94,7 +94,7 @@
                     <h5>OM OS</h5>
                     <br>
                     <p>
-                        <a href="#">MISSION</a><br>
+                        <a href="omOs.html">MISSION</a><br>
                         <a href="#">FAQ</a>
                     </p>
                 </div>
