--- a/produkter.html
+++ b/produkter.html
@@ -27,7 +27,7 @@
             </a>
 
             <div class="navLinks">
-                <a href="#">PRODUKTER</a>
+                <a href="#" class="nav-link active">PRODUKTER</a>
                 <a href="omOs.html">OM OS</a>
                 <a href="#">FAQ</a>
             </div>
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <section>
+        <div>
             <p class="tekstBeskrivelseZeroGreen">Zero Green er en forfriskende og sprudlende alkoholfri øl med en
                 perfekt balance mellem syrlig lime og
                 let bitterhed fra humlen. Med sin frugtige karakter og livlige smagsprofil er den det oplagte valg til
@@ -91,7 +91,7 @@
                 <br><br>Den aromatiske side: En velafstemt kombination af nøje udvalgte humler og let maltprofil, der
                 sikrer dybde og balance i hver tår.<br><br>
             </p>
-        </section>
+        </div>
 
 
         <br><br>
@@ -144,7 +144,7 @@
                     <h5>PRODUKTER</h5>
                     <br>
                     <p>
-                        <a href="#">ZERO GREEN</a><br>
+                        <a href="produkter.html">ZERO GREEN</a><br>
                         <a href="#">ZERO YELLOW</a><br>
                         <a href="#">ZERO PINK</a><br>
                         <a href="#">ZERO ORANGE</a>
@@ -154,7 +154,7 @@
                     <h5>OM OS</h5>
                     <br>
                     <p>
-                        <a href="#">MISSION</a><br>
+                        <a href="omOs.html">MISSION</a><br>
                         <a href="#">FAQ</a>
                     </p>
                 </div>
